add_subdirectory( specie )
add_subdirectory( solidSpecie )
add_subdirectory( thermophysicalFunctions )
  
add_subdirectory( basic )
add_subdirectory( reactionThermo )
add_subdirectory( laminarFlameSpeed )
add_subdirectory( chemistryModel )
add_subdirectory( barotropicCompressibilityModel )
add_subdirectory( SLGThermo )
 
add_subdirectory( solidThermo )
add_subdirectory( solidChemistryModel )
 
add_subdirectory( radiation )
