add_subdirectory( boundaryFoam )
add_subdirectory( nonNewtonianIcoFoam )
add_subdirectory( shallowWaterFoam )
add_subdirectory( adjointShapeOptimizationFoam )
add_subdirectory( simpleFoam )
add_subdirectory( simpleFoam/porousSimpleFoam )
add_subdirectory( simpleFoam/SRFSimpleFoam )
add_subdirectory( pimpleFoam )
add_subdirectory( pimpleFoam/pimpleDyMFoam )
add_subdirectory( pimpleFoam/SRFPimpleFoam )
add_subdirectory( icoFoam )
add_subdirectory( pisoFoam )
