add_subdirectory( reactingParcelFilmFoam )
add_subdirectory( icoUncoupledKinematicParcelFoam )
add_subdirectory( icoUncoupledKinematicParcelFoam/icoUncoupledKinematicParcelDyMFoam )
add_subdirectory( reactingParcelFoam )
add_subdirectory( reactingParcelFoam/simpleReactingParcelFoam )
add_subdirectory( DPMFoam )
add_subdirectory( DPMFoam/MPPICFoam )
add_subdirectory( DPMFoam/DPMTurbulenceModels )
add_subdirectory( sprayFoam/sprayEngineFoam )
add_subdirectory( sprayFoam/sprayDyMFoam )
add_subdirectory( sprayFoam )
add_subdirectory( uncoupledKinematicParcelFoam )
add_subdirectory( coalChemistryFoam )
