add_subdirectory( compressibleMultiphaseInterFoam )
add_subdirectory( interPhaseChangeFoam )
add_subdirectory( compressibleInterFoam )
add_subdirectory( twoPhaseEulerFoam )
add_subdirectory( potentialFreeSurfaceFoam )
add_subdirectory( reactingEulerFoam )
add_subdirectory( driftFluxFoam )
add_subdirectory( twoLiquidMixingFoam )
add_subdirectory( cavitatingFoam )
add_subdirectory( multiphaseEulerFoam )
add_subdirectory( multiphaseInterFoam )
add_subdirectory( interFoam )
