add_subdirectory( compressibleMultiphaseInterFoam/multiphaseMixtureThermo )
add_subdirectory( compressibleMultiphaseInterFoam )
add_subdirectory( interPhaseChangeFoam/phaseChangeTwoPhaseMixtures )
add_subdirectory( interPhaseChangeFoam/interPhaseChangeDyMFoam )
add_subdirectory( interPhaseChangeFoam )
add_subdirectory( compressibleInterFoam/twoPhaseMixtureThermo )
add_subdirectory( compressibleInterFoam/compressibleInterDyMFoam )
add_subdirectory( compressibleInterFoam )
add_subdirectory( twoPhaseEulerFoam/interfacialModels )
add_subdirectory( twoPhaseEulerFoam/phaseCompressibleTurbulenceModels )
add_subdirectory( twoPhaseEulerFoam/twoPhaseSystem )
add_subdirectory( twoPhaseEulerFoam )
add_subdirectory( potentialFreeSurfaceFoam )
add_subdirectory( potentialFreeSurfaceFoam/potentialFreeSurfaceDyMFoam )
add_subdirectory( reactingEulerFoam )
add_subdirectory( driftFluxFoam/mixtureViscosityModels )
add_subdirectory( driftFluxFoam/relativeVelocityModels )
add_subdirectory( driftFluxFoam )
add_subdirectory( twoLiquidMixingFoam )
add_subdirectory( cavitatingFoam )
add_subdirectory( cavitatingFoam/cavitatingDyMFoam )
add_subdirectory( multiphaseEulerFoam/interfacialModels )
add_subdirectory( multiphaseEulerFoam/multiphaseSystem )
add_subdirectory( multiphaseEulerFoam )
add_subdirectory( multiphaseInterFoam/multiphaseMixture )
add_subdirectory( multiphaseInterFoam/multiphaseInterDyMFoam )
add_subdirectory( multiphaseInterFoam )
add_subdirectory( interFoam/interMixingFoam )
add_subdirectory( interFoam/interDyMFoam )
add_subdirectory( interFoam )
