add_subdirectory( stressField )
add_subdirectory( dataConversion )
add_subdirectory( velocityField )
add_subdirectory( scalarField )
add_subdirectory( wall )
add_subdirectory( turbulence )
add_subdirectory( lagrangian )
add_subdirectory( noise )
add_subdirectory( patch )
add_subdirectory( foamCalc )
add_subdirectory( sampling )
add_subdirectory( miscellaneous )
add_subdirectory( graphics )
