add_subdirectory( dsmcInitialise )
add_subdirectory( faceAgglomerate )
add_subdirectory( foamUpgradeCyclics )
add_subdirectory( viewFactorsGen )
add_subdirectory( createExternalCoupledPatchGeometry )
add_subdirectory( wallFunctionTable )
add_subdirectory( engineSwirl )
add_subdirectory( mdInitialise )
add_subdirectory( mapFieldsPar )
add_subdirectory( applyBoundaryLayer )
add_subdirectory( boxTurb )
add_subdirectory( changeDictionary )
add_subdirectory( mapFields )
add_subdirectory( setFields )
