add_subdirectory( surfaceSplitByTopology )
add_subdirectory( surfaceRedistributePar )
add_subdirectory( surfaceCheck )
add_subdirectory( surfaceAutoPatch )
add_subdirectory( surfaceMeshConvert )
add_subdirectory( surfaceFeatureExtract )
add_subdirectory( surfaceRefineRedGreen )
add_subdirectory( surfaceAdd )
add_subdirectory( surfaceSubset )
add_subdirectory( surfaceBooleanFeatures )
add_subdirectory( surfaceOrient )
add_subdirectory( surfaceHookUp )
add_subdirectory( surfaceLambdaMuSmooth )
add_subdirectory( surfaceSplitByPatch )
add_subdirectory( surfaceFeatureConvert )
add_subdirectory( surfaceFind )
add_subdirectory( surfaceClean )
add_subdirectory( surfaceTransformPoints )
add_subdirectory( surfaceMeshTriangulate )
add_subdirectory( surfaceMeshExport )
add_subdirectory( surfaceMeshConvertTesting )
add_subdirectory( surfaceSplitNonManifolds )
add_subdirectory( surfaceMeshInfo )
add_subdirectory( surfaceMeshImport )
add_subdirectory( surfaceCoarsen )
add_subdirectory( surfaceInertia )
add_subdirectory( surfaceToPatch )
add_subdirectory( surfaceConvert )
add_subdirectory( surfacePointMerge )
